--- a/MarvelApp/Base.lproj/Main.storyboard
+++ b/MarvelApp/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NLr-gv-fNP">
-                                <rect key="frame" x="0.0" y="199" width="414" height="283"/>
+                                <rect key="frame" x="0.0" y="201" width="414" height="283"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Procure informações dos herois da Marvel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cep-AR-y4N">
@@ -52,6 +52,9 @@
                                         <state key="normal" title="Buscar">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="eWQ-jy-qpT" kind="show" identifier="segueHero" id="vEy-eV-hy9"/>
+                                        </connections>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bBA-Ke-PbJ">
                                         <rect key="frame" x="36" y="138" width="343" height="30"/>
@@ -69,13 +72,13 @@
                     </view>
                     <navigationItem key="navigationItem" id="tQ8-Pb-CAX"/>
                     <connections>
+                        <outlet property="btnBuscar" destination="kdT-6t-cus" id="j3v-iY-o67"/>
                         <outlet property="tfName" destination="bBA-Ke-PbJ" id="TcO-1U-Fv1"/>
-                        <segue destination="eWQ-jy-qpT" kind="show" id="lzB-2O-JSe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-533.33333333333337" y="-76.339285714285708"/>
+            <point key="canvasLocation" x="-470" y="-76"/>
         </scene>
         <!--Marvel Heroes -->
         <scene sceneID="ASI-Iw-8kQ">
@@ -86,35 +89,54 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="133" id="Mla-Is-FDt">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="133" id="Mla-Is-FDt" customClass="HeroTableViewCell" customModule="MarvelApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="133"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Mla-Is-FDt" id="QiX-8b-d5P">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="132.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eS1-b7-QQM">
-                                            <rect key="frame" x="20" y="11" width="103" height="96"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eS1-b7-QQM">
+                                            <rect key="frame" x="20" y="11" width="80" height="80"/>
                                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="80" id="DWr-kc-UIG"/>
+                                                <constraint firstAttribute="width" constant="80" id="vD0-VZ-mL9"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKq-Eb-Hq5">
-                                            <rect key="frame" x="144" y="24" width="52" height="23"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKq-Eb-Hq5">
+                                            <rect key="frame" x="108" y="11" width="306" height="23"/>
                                             <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="19"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7j-xd-tZc">
-                                            <rect key="frame" x="144" y="72" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7j-xd-tZc">
+                                            <rect key="frame" x="108" y="42" width="306" height="62"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="AKq-Eb-Hq5" secondAttribute="trailing" id="09m-np-bll"/>
+                                        <constraint firstItem="eS1-b7-QQM" firstAttribute="leading" secondItem="QiX-8b-d5P" secondAttribute="leadingMargin" id="CbC-Ph-u6D"/>
+                                        <constraint firstAttribute="trailing" secondItem="M7j-xd-tZc" secondAttribute="trailing" id="EFz-iD-dlA"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="eS1-b7-QQM" secondAttribute="bottom" constant="18.5" id="LNm-1g-uCg"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="M7j-xd-tZc" secondAttribute="bottom" constant="18" id="OVZ-f0-iIH"/>
+                                        <constraint firstItem="M7j-xd-tZc" firstAttribute="leading" secondItem="eS1-b7-QQM" secondAttribute="trailing" constant="8" id="RYe-el-7hu"/>
+                                        <constraint firstItem="AKq-Eb-Hq5" firstAttribute="leading" secondItem="eS1-b7-QQM" secondAttribute="trailing" constant="8" id="Rap-ir-Ux7"/>
+                                        <constraint firstItem="eS1-b7-QQM" firstAttribute="top" secondItem="QiX-8b-d5P" secondAttribute="topMargin" id="c5Z-5s-Cb4"/>
+                                        <constraint firstItem="M7j-xd-tZc" firstAttribute="top" secondItem="AKq-Eb-Hq5" secondAttribute="bottom" constant="8" id="gyM-fq-VUp"/>
+                                        <constraint firstItem="AKq-Eb-Hq5" firstAttribute="top" secondItem="QiX-8b-d5P" secondAttribute="topMargin" id="iG5-5x-94H"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="ivThumb" destination="eS1-b7-QQM" id="cFn-mq-8iW"/>
+                                    <outlet property="lblDescription" destination="M7j-xd-tZc" id="YqS-kz-cvJ"/>
+                                    <outlet property="lblName" destination="AKq-Eb-Hq5" id="H0R-4J-zoF"/>
+                                    <segue destination="sii-uh-pdO" kind="show" id="jKv-aR-VSF"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -123,13 +145,10 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Marvel Heroes " id="xlO-kW-feY"/>
-                    <connections>
-                        <segue destination="sii-uh-pdO" kind="show" id="BpC-Ga-Ark"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iGt-n5-Qzq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="273.91304347826087" y="-76.339285714285708"/>
+            <point key="canvasLocation" x="305.79710144927537" y="-76.339285714285708"/>
         </scene>
         <!--Hero View Controller-->
         <scene sceneID="RQd-z9-p5Q">
