--- a/MarvelApp/HeroesList/View/Cell/MarvelHeroCell.xib
+++ b/MarvelApp/HeroesList/View/Cell/MarvelHeroCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -52,9 +52,9 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="heroImage" destination="NpN-wl-QQO" id="SAz-sc-IjZ"/>
                 <outlet property="lblDescription" destination="mqh-L3-PKj" id="zEf-Ar-85V"/>
                 <outlet property="lblName" destination="2Z1-82-A8Q" id="jCE-7d-abv"/>
-                <outlet property="thumbnail" destination="NpN-wl-QQO" id="SAz-sc-IjZ"/>
             </connections>
             <point key="canvasLocation" x="-217" y="-5"/>
         </tableViewCell>
