Added loader and imageCache

--- a/MarvelApp/HeroesList/View/Cell/MarvelHeroCell.xib
+++ b/MarvelApp/HeroesList/View/Cell/MarvelHeroCell.xib
@@ -23,7 +23,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NpN-wl-QQO">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NpN-wl-QQO" customClass="M">
                         <rect key="frame" x="16" y="16" width="80" height="80"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="8uj-7Q-tQu"/>
